got live streaming output working

--- a/electron/index.html
+++ b/electron/index.html
@@ -1,24 +1,86 @@
 <!doctype html>
 <html>
+
 <head>
   <meta charset="utf-8" />
   <title>Pentest Desktop — MVP</title>
   <style>
-    body { font-family: Inter, system-ui, sans-serif; margin: 18px; }
-    input, button { font-size: 14px; padding: 8px; margin: 6px 0; }
-    #out { white-space: pre-wrap; background:#111; color:#eee; padding:12px; border-radius:6px; height:300px; overflow:auto; }
+    body {
+      font-family: Inter, system-ui, sans-serif;
+      margin: 18px;
+    }
+
+    input,
+    button {
+      font-size: 14px;
+      padding: 8px;
+      margin: 6px 0;
+    }
+
+    #out {
+      white-space: pre-wrap;
+      background: #111;
+      color: #eee;
+      padding: 12px;
+      border-radius: 6px;
+      height: 300px;
+      overflow: auto;
+    }
   </style>
 </head>
+
 <body>
   <h2>Pentest Desktop — MVP</h2>
-  <label>Tool (allowed: dummy-wasm)</label><br/>
-  <input id="tool" placeholder="tool name" value="dummy-wasm"/><br/>
-  <label>Target</label><br/>
-  <input id="target" placeholder="127.0.0.1"/><br/>
+  <label>Tool (allowed: dummy-wasm)</label><br />
+  <input id="tool" placeholder="tool name" value="dummy-wasm" /><br />
+  <label>Target</label><br />
+  <input id="target" placeholder="127.0.0.1" value="127.0.0.1" /><br />
   <button id="run">Run</button>
+  <button id="runStream">Run Streamed</button>
   <h3>Output</h3>
   <div id="out">—</div>
 
+  <script>
+    window.addEventListener("DOMContentLoaded", () => {
+      const outEl = document.getElementById('out');
+
+      document.getElementById('runStream').onclick = () => {
+        const tool = document.getElementById('tool').value.trim();
+        const target = document.getElementById('target').value.trim();
+
+        if (!tool || !target) {
+          outEl.textContent = "Tool and target required";
+          return;
+        }
+
+        outEl.textContent = "[Connecting...]\n";
+        console.log("🔥 Renderer: Creating EventSource...");
+
+        // ❗ USE runStream — NOT getStreamUrl
+        const evtSource = window.api.runStream(tool, target);
+        console.log("🔥 Renderer: EventSource created, readyState =", evtSource.readyState);
+
+        evtSource.onopen = () => {
+          console.log("✅ Renderer: EventSource OPENED");
+          outEl.textContent = "[Stream opened]\n";
+        };
+
+        evtSource.onmessage = (event) => {
+          console.log("📩 Renderer message:", event.data);
+          outEl.textContent += event.data + "\n";
+        };
+
+        evtSource.onerror = (err) => {
+          console.error("❌ Renderer: EventSource ERROR", err);
+          outEl.textContent += "\n[Stream closed or error]\n";
+          evtSource.close();
+        };
+      };
+    });
+  </script>
+
   <script src="renderer.js"></script>
+
 </body>
+
 </html>
