--- a/electron/index.html
+++ b/electron/index.html
@@ -1,86 +1,107 @@
 <!doctype html>
 <html>
-
 <head>
   <meta charset="utf-8" />
   <title>Pentest Desktop — MVP</title>
+
   <style>
     body {
-      font-family: Inter, system-ui, sans-serif;
-      margin: 18px;
+      margin: 0;
+      padding: 0;
+      font-family: Inter, sans-serif;
+      display: flex;
+      height: 100vh;
+      background: #f5f7fa;
+      color: #0f172a;
     }
 
-    input,
-    button {
-      font-size: 14px;
+    .sidebar {
+      width: 240px;
+      background: white;
+      border-right: 1px solid #e2e8f0;
+      padding: 14px;
+      overflow-y: auto;
+    }
+
+    .tool-item {
       padding: 8px;
-      margin: 6px 0;
+      cursor: pointer;
+      border-radius: 6px;
+      margin-bottom: 6px;
+    }
+    .tool-item:hover {
+      background: #e0f2fe;
+    }
+    .active {
+      background: #bae6fd;
+    }
+
+    .main {
+      flex: 1;
+      display: flex;
+      flex-direction: column;
+      padding: 16px;
+      gap: 12px;
+    }
+
+    .inputs label {
+      font-size: 13px;
+      color: #475569;
+    }
+
+    .inputs input {
+      width: 100%;
+      padding: 8px;
+      margin-bottom: 10px;
+      border-radius: 6px;
+      border: 1px solid #cbd5e1;
     }
 
     #out {
-      white-space: pre-wrap;
-      background: #111;
-      color: #eee;
+      background: #0f172a;
+      color: #f1f5f9;
       padding: 12px;
+      border-radius: 8px;
+      height: 380px;
+      overflow-y: auto;
+      white-space: pre-wrap;
+    }
+
+    button {
+      padding: 8px 12px;
+      background: #0284c7;
+      color: white;
       border-radius: 6px;
-      height: 300px;
-      overflow: auto;
+      border: none;
+      cursor: pointer;
+    }
+
+    button:hover {
+      background: #0369a1;
     }
   </style>
 </head>
 
 <body>
-  <h2>Pentest Desktop — MVP</h2>
-  <label>Tool (allowed: dummy-wasm)</label><br />
-  <input id="tool" placeholder="tool name" value="dummy-wasm" /><br />
-  <label>Target</label><br />
-  <input id="target" placeholder="127.0.0.1" value="127.0.0.1" /><br />
-  <button id="run">Run</button>
-  <button id="runStream">Run Streamed</button>
-  <h3>Output</h3>
-  <div id="out">—</div>
 
-  <script>
-    window.addEventListener("DOMContentLoaded", () => {
-      const outEl = document.getElementById('out');
+  <div class="sidebar">
+    <h3>Tools</h3>
+    <div id="toolsList">Loading…</div>
+  </div>
 
-      document.getElementById('runStream').onclick = () => {
-        const tool = document.getElementById('tool').value.trim();
-        const target = document.getElementById('target').value.trim();
+  <div class="main">
+    <h2 id="toolName">Select a tool</h2>
+    <div class="inputs" id="inputs"></div>
 
-        if (!tool || !target) {
-          outEl.textContent = "Tool and target required";
-          return;
-        }
+    <div class="actions">
+      <button id="runBtn">Run</button>
+      <button id="runStreamBtn">Run Streamed</button>
+    </div>
 
-        outEl.textContent = "[Connecting...]\n";
-        console.log("🔥 Renderer: Creating EventSource...");
-
-        // ❗ USE runStream — NOT getStreamUrl
-        const evtSource = window.api.runStream(tool, target);
-        console.log("🔥 Renderer: EventSource created, readyState =", evtSource.readyState);
-
-        evtSource.onopen = () => {
-          console.log("✅ Renderer: EventSource OPENED");
-          outEl.textContent = "[Stream opened]\n";
-        };
-
-        evtSource.onmessage = (event) => {
-          console.log("📩 Renderer message:", event.data);
-          outEl.textContent += event.data + "\n";
-        };
-
-        evtSource.onerror = (err) => {
-          console.error("❌ Renderer: EventSource ERROR", err);
-          outEl.textContent += "\n[Stream closed or error]\n";
-          evtSource.close();
-        };
-      };
-    });
-  </script>
+    <h3>Output</h3>
+    <div id="out">—</div>
+  </div>
 
   <script src="renderer.js"></script>
-
 </body>
-
 </html>
